backend/seed-error 2.log
/Users/priyanshsatija/Desktop/sdproject/backend/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
scripts/seed-complete.ts(100,13): error TS2339: Property 'first' does not exist on type '{ first: string; last: string; } | undefined'.
scripts/seed-complete.ts(100,20): error TS2339: Property 'last' does not exist on type '{ first: string; last: string; } | undefined'.
scripts/seed-complete.ts(108,16): error TS18048: 'job' is possibly 'undefined'.
scripts/seed-complete.ts(109,25): error TS18048: 'stage' is possibly 'undefined'.
scripts/seed-complete.ts(123,26): error TS18048: 'stage' is possibly 'undefined'.

    at createTSError (/Users/priyanshsatija/Desktop/sdproject/backend/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/priyanshsatija/Desktop/sdproject/backend/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/priyanshsatija/Desktop/sdproject/backend/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/priyanshsatija/Desktop/sdproject/backend/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/priyanshsatija/Desktop/sdproject/backend/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1706:10
    at Object.require.extensions.<computed> [as .ts] (/Users/priyanshsatija/Desktop/sdproject/backend/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
    at Function._load (node:internal/modules/cjs/loader:1108:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2339, 2339, 18048, 18048, 18048 ]
}
